--- a/index.html
+++ b/index.html
@@ -11,14 +11,14 @@
     	* { padding: 0; margin: 0; }
     	canvas { background: #eee; display: block; margin: 0 auto; }
     </style>
-    
+
 </head>
 
 <body>
 
     <canvas id="myCanvas" width="480" height="320"></canvas>
 
-    <script src="./src/js/main.js"></script>
+    <script src="./dist/bundle.js"></script>
 
 </body>
 
