--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <link href="./src/css/style.css" rel="stylesheet">
+    <link href="./dist/style.css" rel="stylesheet">
 
     <title>Gamedev Canvas Workshop</title>
 
