--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
 
-    <canvas id="myCanvas" width="480" height="320"></canvas>
+    <canvas id="myCanvas" width="480" height="320" class="container mx-auto bg-gray-100"></canvas>
 
     <script src="./dist/bundle.js"></script>
 
